wheres the conflict?

--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,18 @@
 <html>
    <head>
-      <title> This ia a cool website </title>
+      <title> Neural Network Manager </title>
+      <link rel="stylesheet" type="text/css" href="/web/css/semantic.css">
+      <script src="/web/js/semantic.js"></script>
    </head>
    <body>
-     Look at how cool it is.
+     <div> nav </div>
+     <div> load nn </div>
+     <div> log dump per epoch </div>
+     <div> saved states </div>
+     <div class="ui three item menu">
+      <a class="active item">Editorials</a>
+      <a class="item">Reviews</a>
+      <a class="item">Upcoming Events</a>
+    </div>
    </body>
  </html>
