--- a/views/index.html
+++ b/views/index.html
@@ -16,5 +16,17 @@
       </div>
     </div>
 
+    <button id="pause" class="ui labeled icon button">
+      <i class="pause icon"></i>
+      Pause
+    </button>
+    <button id="play" class="ui labeled icon button">
+      <i class="play icon"></i>
+      Run
+    </button>
+    <button id="stop" class="ui labeled icon button">
+      <i class="stop icon"></i>
+      Stop
+    </button>
    </body>
  </html>
