--- a/views/index.html
+++ b/views/index.html
@@ -16,17 +16,20 @@
       </div>
     </div>
 
-    <button id="pause" class="ui labeled icon button">
-      <i class="pause icon"></i>
-      Pause
-    </button>
-    <button id="play" class="ui labeled icon button">
-      <i class="play icon"></i>
-      Run
-    </button>
-    <button id="stop" class="ui labeled icon button">
-      <i class="stop icon"></i>
-      Stop
-    </button>
+
+    <form class="ui form">
+      <button id="pause" class="ui labeled icon button" type="submit" value="pause">
+        <i class="pause icon"></i>
+        Pause
+      </button>
+      <button id="play" class="ui labeled icon button" type="submit" value="play">
+        <i class="play icon"></i>
+        Run
+      </button>
+      <button id="stop" class="ui labeled icon button" type="submit" value="stop">
+        <i class="stop icon"></i>
+        Stop
+      </button>
+    </form>
    </body>
  </html>
