--- a/views/index.html
+++ b/views/index.html
@@ -18,15 +18,15 @@
 
 
     <form class="ui form">
-      <button id="pause" class="ui labeled icon button" type="submit" value="pause">
+      <button id="pause" class="ui labeled icon button" type="submit" name="action" value="pause">
         <i class="pause icon"></i>
         Pause
       </button>
-      <button id="play" class="ui labeled icon button" type="submit" value="play">
+      <button id="play" class="ui labeled icon button" type="submit" name="action" value="play">
         <i class="play icon"></i>
         Run
       </button>
-      <button id="stop" class="ui labeled icon button" type="submit" value="stop">
+      <button id="stop" class="ui labeled icon button" type="submit" name="action" value="stop">
         <i class="stop icon"></i>
         Stop
       </button>
