--- a/views/index.html
+++ b/views/index.html
@@ -1,3 +1,5 @@
+<%namespace file="header.html" import="*"/>
+<!DOCTYPE html>
 <html>
    <head>
       <title> Neural Network Manager </title>
@@ -6,30 +8,11 @@
       <script src="/js/semantic.js"></script>
    </head>
    <body>
-     <div class="ui tiered nav menu">
-      <div class="container">
-        <a class="item logo" href="/views/index.html">
-          <b>Neural Network</b> Manager
-        </a>
-        <a class="item" href="/views/savedStates.html"> Saved States </a>
-        <a class="item" href="/views/buildLog.html"> Build Log </a>
-      </div>
+    ${createHeaderBar()}
+
+    <div id="content-container">
+      <%block name="content"/>
     </div>
 
-
-    <form class="ui form">
-      <button id="pause" class="ui labeled icon button" type="submit" name="action" value="pause">
-        <i class="pause icon"></i>
-        Pause
-      </button>
-      <button id="play" class="ui labeled icon button" type="submit" name="action" value="play">
-        <i class="play icon"></i>
-        Run
-      </button>
-      <button id="stop" class="ui labeled icon button" type="submit" name="action" value="stop">
-        <i class="stop icon"></i>
-        Stop
-      </button>
-    </form>
   </body>
  </html>
