--- a/views/savedStates.html
+++ b/views/savedStates.html
@@ -1,26 +1,5 @@
-<html>
-   <head>
-      <title> Neural Network Manager </title>
-      <link rel="stylesheet" type="text/css" href="/css/semantic.css">
-      <script src="/js/jquery-3.1.0.min.js"></script>
-      <script src="/js/semantic.js"></script>
-   </head>
-   <body>
-     <div class="ui tiered nav menu">
-      <div class="container">
-        <a class="item logo" href="/views/index.html">
-          <b>Neural Network</b> Manager
-        </a>
-        <a class="item" href="/views/savedStates.html"> Saved States </a>
-        <a class="item" href="/views/buildLog.html"> Build Log </a>
-      </div>
-    </div>
-
-    <div id="filter-wrapper" class="ui icon input">
-      <input type="text" placeholder="Filter...">
-      <i class="circular search link icon"></i>
-    </div>
-
+<%inherit file="index.html" />
+<%block name="content">
     <div class="ui cards">
       <div class="card">
         <div class="content">
@@ -61,5 +40,4 @@
         </div>
       </div>
     </div>
-  </body>
- </html>
+</%block>
