--- a/views/main.html
+++ b/views/main.html
@@ -16,6 +16,10 @@
     <i class="stop icon"></i>
     Stop
   </button>
-
+  <button id="save" class="ui labeled icon button" type="submit" name="action" value="stop">
+    <i class="save icon"></i>
+    Save
+  </button>
+  
   <script src="/js/buttonHandler.js"></script>
 </%block>
