load gets data but not the right data

--- a/views/main.html
+++ b/views/main.html
@@ -17,9 +17,13 @@
     Stop
   </button>
   <button id="save" class="ui labeled icon button" type="submit" name="action" value="stop">
-    <i class="save icon"></i>
+    <i class="download do icon"></i>
     Save
   </button>
-  
+  <button id="load" class="ui labeled icon button" type="submit" name="action" value="stop">
+    <i class="upload do icon"></i>
+    Load
+  </button>
+
   <script src="/js/buttonHandler.js"></script>
 </%block>
