Basic websocket functionality, todo: pushing snapshots

--- a/views/main.html
+++ b/views/main.html
@@ -25,5 +25,8 @@
     Load
   </button>
 
+  <div id="snapshot"></div>
+
+  <script src="/js/snapshotHandler.js"></script>
   <script src="/js/buttonHandler.js"></script>
 </%block>
