build log is streaming correctly, time to pretty it up

--- a/views/buildLog.html
+++ b/views/buildLog.html
@@ -1,5 +1,10 @@
 <%inherit file="index.html" />
 <%block name="content">
+  <link rel="stylesheet" type="text/css" href="css/buildLog.css">
+    <div id="logFeed">
+      
+    </div>
+
     <div class="ui feed">
       <div class="event">
         <div class="content">
@@ -84,4 +89,7 @@
         </div>
       </div>
     </div>
+
+    <script src="js/buildLogHandler.js"></script>
+    </link>
  </%block>
