Fixed dem der prolems

--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="/css/semantic.css">
     <script src="/js/jquery-3.1.0.min.js"></script>
     <script src="/js/semantic.js"></script>
+      <link rel="stylesheet" type="text/css" href="/css/buildLog.css">
+
   </head>
   <body>
     ${createHeaderBar()}
