--- a/css/buildLog.css
+++ b/css/buildLog.css
@@ -1,4 +1,36 @@
+#content-container {
+	height: 89%;
+}
+
+#log-title {
+	text-align: center;
+	margin-bottom: 1em;
+}
+
 #logFeed {
-  max-height: 400px;
-  overflow-y: scroll;
+	height: 90%;
+	overflow-y: scroll;
+	background-color: #f7f8fb;
+	border: 1px solid #EEF1F6;
+	border-radius: 4px;
+	width: 85%;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#logFeed::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+ 	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+#logFeed::-webkit-scrollbar {
+	width: 6px;
+	background-color: #F5F5F5;
+}
+
+#logFeed::-webkit-scrollbar-thumb {
+  	border-radius: 10px;
+	background-color: #000000;
 }
