--- a/views/buildLog.html
+++ b/views/buildLog.html
@@ -1,94 +1,16 @@
 <%inherit file="index.html" />
 <%block name="content">
-    <div id="logFeed">
+
+<h1 id="log-title"> Build Log Activity Feed </h1>
+<div id="logFeed" class="ui feed"></div>
+
+<div class="ui feed">
+  <div class="event">
+    <div class="content">
       
-    </div>
+  </div>
+</div>
 
-    <div class="ui feed">
-      <div class="event">
-        <div class="content">
-          <div class="summary">
-            <a class="user">
-              Elliot Fu
-            </a> added you as a friend
-            <div class="date">
-              1 Hour Ago
-            </div>
-          </div>
-          <div class="meta">
-            <a class="like">
-              <i class="like icon"></i> 4 Likes
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="event">
-        <div class="content">
-          <div class="summary">
-            <a>Helen Troy</a> added <a>2 new illustrations</a>
-            <div class="date">
-              4 days ago
-            </div>
-          </div>
-          <div class="meta">
-            <a class="like">
-              <i class="like icon"></i> 1 Like
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="event">
-        <div class="content">
-          <div class="summary">
-            <a class="user">
-              Jenny Hess
-            </a> added you as a friend
-            <div class="date">
-              2 Days Ago
-            </div>
-          </div>
-          <div class="meta">
-            <a class="like">
-              <i class="like icon"></i> 8 Likes
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="event">
-        <div class="content">
-          <div class="summary">
-            <a>Joe Henderson</a> posted on his page
-            <div class="date">
-              3 days ago
-            </div>
-          </div>
-          <div class="extra text">
-            Ours is a life of constant reruns. We're always circling back to where we'd we started, then starting all over again. Even if we don't run extra laps that day, we surely will come back for more of the same another day soon.
-          </div>
-          <div class="meta">
-            <a class="like">
-              <i class="like icon"></i> 5 Likes
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="event">
-        <div class="content">
-          <div class="summary">
-            <a>Justen Kitsune</a> added <a>2 new photos</a> of you
-            <div class="date">
-              4 days ago
-            </div>
-          </div>
-          <div class="meta">
-            <a class="like">
-              <i class="like icon"></i> 41 Likes
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <script src="js/buildLogHandler.js"></script>
-    </link>
- </%block>
+<script src="js/buildLogHandler.js"></script>
+</link>
+</%block>
