footer + something + start of embedding iframe

--- a/views/buildLog.html
+++ b/views/buildLog.html
@@ -1,16 +1,9 @@
 <%inherit file="index.html" />
 <%block name="content">
 
-<h1 id="log-title"> Build Log Activity Feed </h1>
-<div id="logFeed" class="ui feed"></div>
+	<h1 class="page-title"> <i class="list icon"></i> Build Log Activity Feed </h1>
+	<div id="logFeed" class="ui feed"></div>
 
-<div class="ui feed">
-  <div class="event">
-    <div class="content">
-      
-  </div>
-</div>
+	<script src="js/buildLogHandler.js"></script>
 
-<script src="js/buildLogHandler.js"></script>
-</link>
 </%block>
