--- a/views/header.html
+++ b/views/header.html
@@ -1,4 +1,4 @@
-<%def name="createHeaderBar()">
+<%def name="createHeader()">
   <div class="ui tiered nav menu">
     <div class="container">
       <a class="item logo" href="/">
@@ -6,6 +6,7 @@
       </a>
       <a class="item" href="/savedStates"> Saved States </a>
       <a class="item" href="/buildLog"> Build Log </a>
+      <a class="item" href="/notebook"> Notebook </a>
     </div>
   </div>
 </%def>
