--- a/views/index.html
+++ b/views/index.html
@@ -1,19 +1,24 @@
 <%namespace file="header.html" import="*"/>
+<%namespace file="footer.html" import="*"/>
 <!DOCTYPE html>
 <html>
    <head>
     <title> Neural Network Manager </title>
     <link rel="stylesheet" type="text/css" href="/css/semantic.css">
+    <link rel="stylesheet" type="text/css" href="/css/index.css">
+    <link rel="stylesheet" type="text/css" href="/css/buildLog.css">
+    <link rel="stylesheet" type="text/css" href="/css/notebook.css">
     <script src="/js/jquery-3.1.0.min.js"></script>
     <script src="/js/semantic.js"></script>
-      <link rel="stylesheet" type="text/css" href="/css/buildLog.css">
 
   </head>
   <body>
-    ${createHeaderBar()}
+    ${createHeader()}
 
     <div id="content-container">
       <%block name="content"/>
     </div>
+
+    ${createFooter()}
   </body>
  </html>
