--- a/views/notebook.html
+++ b/views/notebook.html
@@ -2,6 +2,6 @@
 <%block name="content">
 
 	<h1 class="page-title"> Jupyter Notebook </h1>
- 	<iframe id="notebook-wrapper" src="https://localhost:8888/notebooks/notebooks/test.ipynb"></iframe>
+ 	<iframe id="notebook-wrapper" src="http://localhost:8888/notebooks/notebooks/test.ipynb"></iframe>
 
 </%block>
