--- a/views/notebook.html
+++ b/views/notebook.html
@@ -1,7 +1,7 @@
 <%inherit file="index.html" />
 <%block name="content">
 
-	<h1 class="page-title"> Jupyter Notebook </h1>
+	<h1 class="page-title"> <i class="write icon"></i> Jupyter Notebook </h1>
  	<iframe id="notebook-wrapper" src="http://localhost:8888/notebooks/notebooks/test.ipynb"></iframe>
 
 </%block>
