--- a/css/buildLog.css
+++ b/css/buildLog.css
@@ -1,32 +1,28 @@
-.page-title {
-	text-align: center;
-	margin-bottom: 1em;
-}
-
 #logFeed {
 	height: 90%;
 	overflow-y: scroll;
-	background-color: #f7f8fb;
+	background-color: #1F1C27;
 	border: 1px solid #EEF1F6;
 	border-radius: 4px;
 	width: 85%;
     position: relative;
     margin-left: auto;
     margin-right: auto;
+    color: #E7DFDD;
 }
 
 #logFeed::-webkit-scrollbar-track {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
  	border-radius: 10px;
-	background-color: #F5F5F5;
+	background-color: #E7DFDD;
 }
 
 #logFeed::-webkit-scrollbar {
 	width: 6px;
-	background-color: #F5F5F5;
+	background-color: #E7DFDD;
 }
 
 #logFeed::-webkit-scrollbar-thumb {
   	border-radius: 10px;
-	background-color: #000000;
+	background-color: #A239CA;
 }
