started on showing available models

--- a/views/main.html
+++ b/views/main.html
@@ -25,8 +25,8 @@
     Load
   </button>
 
-  <div id="snapshot"></div>
+  <div id="model-list"></div>
 
-  <script src="/js/snapshotHandler.js"></script>
+  <script src="/js/modelListHandler.js"></script>
   <script src="/js/buttonHandler.js"></script>
 </%block>
