--- a/views/main.html
+++ b/views/main.html
@@ -25,7 +25,7 @@
     Load
   </button>
 
-  <div id="model-list"></div>
+  <div id="model-list" class="ui cards"></div>
 
   <script src="/js/modelListHandler.js"></script>
   <script src="/js/buttonHandler.js"></script>
