white background, readded snapshotting and time to train prediction

--- a/views/main.html
+++ b/views/main.html
@@ -25,6 +25,8 @@
     Load
   </button>
 
+  <div id="snapshot"></div>
+
   <div id="model-list" class="ui fluid search selection dropdown">
     <input type="hidden" name="country">
     <i class="dropdown icon"></i>
@@ -33,6 +35,7 @@
   </div>
   <!-- <div id="model-list" class="ui cards"></div> -->
 
+  <script src="/js/snapshotHandler.js"></script>
   <script src="/js/modelListHandler.js"></script>
   <script src="/js/buttonHandler.js"></script>
 </%block>
