--- a/css/index.css
+++ b/css/index.css
@@ -4,9 +4,9 @@
 }
 
 
-/*body {
-	background: #0E0B16;
-}*/
+body {
+	background: #e9ece5;
+}
 
 .nav {
 	height: 7%;
@@ -19,7 +19,7 @@
 .page-title {
 	text-align: center;
 	margin-bottom: 1em;
-	color: #A239CA;
+	color: #3b3a36;
 }
 
 .ui.footer.form-page {
@@ -28,8 +28,8 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    background: #4717F6;
-    color: #E7DFDD;
+    background: #b3c2bf;
+    color: #3b3a36;
 }
 
 #model-list {
