--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,5 @@
 <%namespace file="header.html" import="*"/>
+<%namespace file="loader.html" import="*"/>
 <%namespace file="footer.html" import="*"/>
 <!DOCTYPE html>
 <html>
@@ -8,12 +9,15 @@
     <link rel="stylesheet" type="text/css" href="/css/index.css">
     <link rel="stylesheet" type="text/css" href="/css/buildLog.css">
     <link rel="stylesheet" type="text/css" href="/css/notebook.css">
+    <link rel="stylesheet" type="text/css" href="/css/loader.css">
     <script src="/js/jquery-3.1.0.min.js"></script>
     <script src="/js/semantic.js"></script>
 
   </head>
   <body>
     ${createHeader()}
+
+    ${createLoader()}
 
     <div id="content-container">
       <%block name="content"/>
