Made the sockets a bit better

--- a/views/main.html
+++ b/views/main.html
@@ -25,6 +25,13 @@
     Load
   </button>
 
+  <div id="state"></div>
+  <div id="epoch"></div>
+  <div id="epochTarget"></div>
+  <div id="avgtime"></div>
+  <div id="remaining"></div>
+  <div id="trainerr"></div>
+  <div id="accuracy"></div>
   <div id="snapshot"></div>
 
   <div id="model-list" class="ui fluid search selection dropdown">
