--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="/css/loader.css">
     <script src="/js/jquery-3.1.0.min.js"></script>
     <script src="/js/semantic.js"></script>
+    <script src="/js/Chart.min.js"></script>
   </head>
   <body>
     ${createHeader()}
@@ -22,6 +23,5 @@
       <%block name="content"/>
     </div>
 
-    ${createFooter()}
   </body>
  </html>
