--- a/views/main.html
+++ b/views/main.html
@@ -41,10 +41,9 @@
     <div id="model-list-wrapper" class="menu"></div>
   </div>
 
-  <canvas id="myChart" width="400" height="400"></canvas>
+  <canvas id="myChart"></canvas>
 
   <script src="/js/snapshotHandler.js"></script>
   <script src="/js/modelListHandler.js"></script>
   <script src="/js/buttonHandler.js"></script>
-  <script src="/js/exampleChart.js"></script>
 </%block>
